<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <group android:checkableBehavior="single">
            <item android:id="@+id/nav_home"
                android:title="@string/nav_home"
                android:icon="@drawable/ic_home"/>
            <item android:id="@+id/nav_favorite"
                android:title="@string/nav_favorite"
                android:icon="@drawable/ic_favorite"/>
            <item android:id="@+id/nav_history"
                android:title="nav_history"
                android:icon="@drawable/ic_history"/>
        </group>


    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/nav_my_profile"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_user"/>
            <item android:id="@+id/nav_change_password"
                android:title="@string/nav_chang_password"
                android:icon="@drawable/ic_password"/>
        </menu>

    </item>
</menu>